--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ h2 {
   opacity: 0.75;
 }
 
+img {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  border: 2px solid #000;
+}
+
 .container {
   width: min(var(--container-width), 100%);
   margin: 0 auto;
